# charmev

./: pubspec.yaml
android/app/: build.gradle
lib/common/services/fr_bridge/: bridge_generated.dart
lib/config/: env.dart
lib/screens/: home.dart
rust/: Cargo.toml  Makefile
rust/src/: api.rs  bridge_generated.rs  lib.rs  request.rs
rust/src/examples/: get_storage.rs
